# hearts

./: .gitignore  README.md  claude.md  plan.md  pyproject.toml
docs/: api_reference.md  data_format.md  ml_guide.md
examples/: my_first_bot.py
hearts/: __main__.py  bot.py  game.py  round.py  rules.py  state.py  tournament.py  types.py
hearts/bots/: human_bot.py  ml_bot.py  random_bot.py  rule_bot.py
hearts/data/: __init__.py  generator.py  schema.py
hearts/ml/: __init__.py  evaluate.py  features.py  train.py
scripts/: evaluate_model.py  generate_data.py  play_game.py  play_interactive.py  run_tournament.py  train_model.py
tests/: test_bots.py  test_evaluate.py  test_features.py  test_game.py  test_generator.py  test_ml_bot.py  test_round.py  test_rules.py  test_schema.py  test_state.py  test_tournament.py  test_train.py  test_types.py
