[project]
name = "hearts"
version = "0.1.0"
description = "Hearts card game engine with ML bot framework"
requires-python = ">=3.11"

[project.optional-dependencies]
ml = ["numpy", "scikit-learn", "matplotlib"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
